--- a/WEB/lab6/input.html
+++ b/WEB/lab6/input.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="custom-input">
-        <label>name</label>
-        <input type="text" />
+        <input class="form-input" type="text" />
+        <label class="form-label">name</label>
     </div>
 </body>
 
